argocd/k8s-manifest/myapp2/myapp-nginx-ingress.yaml
 # Ingress Resource for myapp2
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp2-ingress
  namespace: myapp2
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - myapp2.apsissolutions.com
    secretName: myapp2-tls
  rules:
  - host: myapp2.apsissolutions.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp2-service
            port:
              number: 80
